--- a/exercicios/ex24iframe/index.html
+++ b/exercicios/ex24iframe/index.html
@@ -7,6 +7,22 @@
     <title>Iframe</title>
 </head>
 <body>
-    
+    <h1>testando o uso de iframe</h1>
+    <p>Acessando o site do 
+
+        <iframe src="https://www.cursoemvideo.com" frameborder="0" height="500"><a href="https://www.cursoemvideo.com" target="_blank">curso em vídeo</a>
+
+        </iframe> 
+        
+       para aprender aprogramar
+    </p>
+    <p>p repositório do Guanabra
+
+        <iframe src="https://gustavoguanabara.github.io" frameborder="0">
+           no <a href="https://gustavoguanabara.github.io"></a>
+        </iframe>
+
+        também é legal
+    </p>
 </body>
 </html>
